# android-boost-rtree

./: .gitmodules  README.md
app/: .gitignore  CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/kkaefer/boostrtree/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/kkaefer/boostrtree/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/kkaefer/boostrtree/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
